--- a/Missions/.project
+++ b/Missions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Mission 1</name>
+	<name>Missions</name>
 	<comment></comment>
 	<projects>
 	</projects>
